# ccstrings

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: ccexceptions-macros.texi  ccstrings.texi  macros.texi
meta/automake/: mmux-makefile-rules
meta/scripts/: ccstrings.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccstructs.sh
src/: ccstrings-buffer.c  ccstrings-buffers.c  ccstrings-buffers.h  ccstrings-conditions.c  ccstrings-internals.h  ccstrings-strings.c  ccstrings-version.c  ccstrings.h
tests/: buffers.c  version.c
